# judo

./: .gitignore  CHANGELOG.md  README.md  ROLLOUT_BACKEND_INTEGRATION.md  identity_network_pendulum.onnx  identity_network_spot.onnx  objects.inv  pyproject-build.toml  pyproject.toml  searchindex.js  test_onnx_rollout.py
.doctrees/: environment.pickle
.doctrees/api/judo/tasks/: index.doctree
.doctrees/api/judo/tasks/base/: index.doctree
.doctrees/api/judo/tasks/fr3_pick/: index.doctree
.github/workflows/: build-wheels.yml  docs.yml  precommit.yml  pypi_publish.yml  test.yml
_modules/judo/app/visualization/: index.html
_modules/judo/tasks/base/: index.html
_modules/judo/tasks/fr3_pick/: index.html
_modules/judo/visualizers/model/: index.html
_sources/api/judo/tasks/: index.rst.txt
_sources/api/judo/tasks/base/: index.rst.txt
_sources/api/judo/tasks/fr3_pick/: index.rst.txt
api/judo/tasks/: index.html
api/judo/tasks/base/: index.html
api/judo/tasks/fr3_pick/: index.html
api/judo/visualizers/model/: index.html
dev/: benchmark_spot.py  compare_python_cpp_stability.py  compose_xinghao_end2end_onnx.py  create_identity_network.py  create_pendulum_network.py  create_spot_identity_network.py  debug_cpp_performance.py  debug_spot_policy_sim.py  diagnose_performance_variability.py  diagnose_persistent_threadpool.py  dummy_spot_policy.onnx  dummy_spot_policy_h2a2.onnx  example_rollout_spot.py  export_dummy_policy_onnx.py  export_torch_wrapper_to_onnx.py  export_xinghao_wrapper_onnx.py  final_performance_comparison.py  inspect_mujoco_rollout.py  load_model.py  policy_passthrough.onnx  policy_with_plan.onnx  policy_wrapper.py  stable_cpp_benchmark.py  test_cpp.py  test_cpp_rollout.py  test_cpp_rollout_fixed.py  test_onnx_persistent_threadpool.py  test_onnx_policy_rollout.py  test_onnx_rollout.py  test_persistent_rollout_spot.py  test_persistent_threadpool.py  test_threadpool_hypothesis.py  test_xinghao_wrapper_onnx.py  torch_policy_wrapper.py  xinghao_policy_torch_wrapper.py
docs/: rollout_backends.md
example_configs/: __init__.py
genindex/: index.html
judo/app/: controller.py  simulation.py
judo/app/dora/: controller.py
judo/configs/: backends_test.yaml  judo_default.yaml  rollout_backends.yaml  rollout_onnx.yaml  test_cpp_backend.yaml  test_policy_backend.yaml
judo/controller/: __init__.py  controller.py  overrides.py
judo/models/meshes/spot/meshes/arm/visual/: arm_link_el1.mtl  arm_link_fngr.mtl  arm_link_wr0.mtl  arm_link_wr1.mtl
judo/models/meshes/spot/meshes/base/visual/: body.mtl  rear_left_upper_leg.mtl
judo/models/xml/: fr3_ball.xml  g1_manipulation.xml  spot_box.xml  spot_door_box.xml
judo/models/xml/fr3_components/: params_and_default.xml
judo/models/xml/objects/: box.xml  ramp.xml  yellow_chair.xml  yellow_chair_defs.xml
judo/models/xml/spot_components/: actuator.xml  arm.xml  assets.xml  body.xml  default.xml  legs.xml  robot.xml  spot_box.xml  spot_yellow_chair.xml  spot_yellow_chair_ramp.xml
judo/optimizers/: __init__.py  base.py  cmaes.py  overrides.py
judo/simulation/: mj_simulation.py
judo/tasks/: __init__.py  base.py  cartpole.py  cylinder_push_new.py  fr3_ball.py  fr3_pick.py  g1_manipulation.py  spot_door_box.py  spot_locomotion.py
judo/tasks/spot/: spot_base.py  spot_box.py  spot_constants.py  spot_locomotion.py  spot_yellow_chair.py  spot_yellow_chair_ramp.py
judo/utils/: indexing.py  mujoco.py  mujoco_cpp.py  mujoco_spot.py
judo/visualizers/: model.py
judo_cpp/: CMakeLists.txt  __init__.py  bindings.cpp  onnx_interface_wrapped.cpp  onnx_interface_wrapped.h  onnx_rollout.cpp  onnx_rollout.h  pyproject.toml  rollout_spot.cpp  rollout_spot.h  spot_rollout.cpp  spot_rollout.h  spot_rollout_simple.cpp  spot_rollout_wrapper.py
judo_cpp/judo_cpp/: __init__.py
judo_cpp/policy/: xinghao_policy_end2end.onnx  xinghao_policy_v1.onnx  xinghao_policy_wrapped_torch.onnx  xinghao_policy_wrapper.onnx
scripts/: performance_benchmark.py  timing_benchmark.py  visualize_benchmark.py  visualizer.py
tests/test_controller/: test_action_normalization.py
tests/test_tasks/: test_indexing.py
